--- a/requirements.txt
+++ b/requirements.txt
@@ -1,158 +1,7 @@
-absl-py==1.4.0
-apturl==0.5.2
-astunparse==1.6.3
-attrs==19.3.0
-awscli==1.18.69
-bcrypt==3.1.7
-bidict==0.22.0
-blinker==1.8.2
-botocore==1.16.19
-Brlapi==0.7.0
-cached-property==1.5.1
-cachetools==5.3.0
-certifi==2019.11.28
-chardet==3.0.4
-chrome-gnome-shell==0.0.0
-click==8.1.7
-colorama==0.4.3
-command-not-found==0.3
-cryptography==2.8
-cupshelpers==1.0
-cycler==0.11.0
-dbus-python==1.2.16
-defer==1.0.6
-devscripts===2.20.2ubuntu2
-distro==1.4.0
-distro-info==0.23+ubuntu1.1
-dnspython==1.16.0
-docker==4.1.0
-docker-compose==1.25.0
-dockerpty==0.4.1
-docopt==0.6.2
-docutils==0.16
-duplicity==0.8.12.0
-entrypoints==0.3
-Faker==25.8.0
-fasteners==0.14.1
-flask==3.0.3
-flask-sqlalchemy==3.1.1
-flatbuffers==23.3.3
-fonttools==4.29.0
-future==0.18.2
-gast==0.4.0
-google-auth==2.17.1
-google-auth-oauthlib==1.0.0
-google-pasta==0.2.0
-gpg==1.13.1
-greenlet==3.0.3
-grpcio==1.53.0
-h5py==3.8.0
-httplib2==0.14.0
-idna==2.8
-importlib-metadata==7.1.0
-itsdangerous==2.2.0
-jax==0.4.8
-jinja2==3.1.4
-jmespath==0.9.4
-joblib==1.4.2
-jsonschema==3.2.0
-keras==2.12.0
-keyring==18.0.1
-kiwisolver==1.3.2
-language-selector==0.1
-launchpadlib==1.10.13
-lazr.restfulclient==0.14.2
-lazr.uri==1.0.3
-libclang==16.0.0
-libvirt-python==6.1.0
-lockfile==0.12.2
-louis==3.12.0
-macaroonbakery==1.3.1
-Mako==1.1.0
-Markdown==3.1.1
-MarkupSafe==2.1.2
-matplotlib==3.5.1
-ml-dtypes==0.0.4
-monotonic==1.5
-more-itertools==4.2.0
-mtcnn==0.1.1
-netifaces==0.10.4
-numpy==1.22.1
-oauthlib==3.1.0
-olefile==0.46
-onboard==1.4.1
-opencv-python==4.7.0.72
-opencv-python-headless==4.7.0.72
-opt-einsum==3.3.0
-packaging==20.3
+Flask==3.0.3
+Flask-SQLAlchemy==3.1.1
 pandas==2.0.3
-paramiko==2.6.0
-pexpect==4.6.0
-Pillow==7.0.0
-protobuf==4.22.1
-psycopg2==2.9.9
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycairo==1.16.2
-pycrypto==2.6.1
-pycups==1.9.73
-Pygments==2.3.1
-PyGObject==3.36.0
-PyJWT==1.7.1
-pymacaroons==0.13.0
-PyNaCl==1.3.0
-pyparsing==2.4.6
-PyQt5==5.14.1
-pyRFC3339==1.1
-pyrsistent==0.15.5
-pyserial==3.5
-python-apt==2.0.1+ubuntu0.20.4.1
-python-dateutil==2.9.0.post0
-python-debian==0.1.36+ubuntu1.1
-python-engineio==4.3.4
-python-magic==0.4.16
-python-socketio==5.7.2
-pytz==2024.1
-pyxdg==0.26
-PyYAML==5.3.1
-reportlab==3.5.34
-requests==2.22.0
-requests-oauthlib==1.3.1
-requests-unixsocket==0.2.0
-roman==2.0.0
-rsa==4.9
-s3transfer==0.3.3
 scikit-learn==1.3.2
-scipy==1.10.1
-SecretStorage==2.3.1
-simplejson==3.16.0
-sip==4.19.21
-six==1.14.0
-SQLAlchemy==2.0.30
-ssh-import-id==5.10
-systemd-python==234
-tensorboard==2.12.1
-tensorboard-data-server==0.7.0
-tensorboard-plugin-wit==1.8.1
-tensorflow==2.12.0
-tensorflow-estimator==2.12.0
-tensorflow-io-gcs-filesystem==0.32.0
-termcolor==2.2.0
-texttable==1.6.2
-threadpoolctl==3.5.0
-tk==0.1.0
-typing-extensions==4.12.2
-tzdata==2024.1
-ubuntu-advantage-tools==8001
-ubuntu-drivers-common==0.0.0
-ufw==0.36
-unattended-upgrades==0.1
-unidiff==0.5.5
-urllib3==1.25.8
-usb-creator==0.3.7
-wadllib==1.3.3
-websocket-client==1.4.2
-werkzeug==3.0.3
-wrapt==1.14.1
-xkit==0.0.0
-zipp==1.0.0
+statsmodels==0.14.1
+flask-cors==4.0.1
+Faker==25.8.0
